@@ -1,0 +1,4 @@
+#include "IoState.h"
+#include "IoObject.h"
+
+void IoFoundation_Init(IoState *self, IoObject *context);
